--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,6 @@ name: NeruPractice
 version: '${project.version}'
 main: club.neru.NeruPractice
 authors: [ NaerQAQ ]
-load: STARTUP
+depend:
+  - WorldEdit
+  - FastAsyncWorldEdit
