添加命令框架、多语言系统、对工具类进行部分修改。

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: NeruPractice
 version: '${project.version}'
 main: club.neru.NeruPractice
-authors: [ NaerQAQ ]
+authors: [ NaerQAQ, L1ncey, QwQTsuki ]
 depend:
   - WorldEdit
   - FastAsyncWorldEdit
