--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.Despical</groupId>
+            <artifactId>CommandFramework</artifactId>
+            <version>1.2.6</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- https://projectlombok.org/setup/maven -->
         <dependency>
             <groupId>org.projectlombok</groupId>
