完善 Arena，若干修改。

--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -3,3 +3,6 @@ practice:
   - "&3Neru Practice"
   - "&3Developed collaboratively by NaerQAQ, L1ncey, and QwQTsuki for the Neru server."
   - " "
+
+reset-done:
+  - "Successfully reset the arena: <name>, took <time>ms."
