稳定竞技场复制，修复连续复制的效率减半问题。改名 Mochi.

--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -1,6 +1,6 @@
 practice:
   - " "
-  - "&3Neru Practice"
+  - "&3Mochi"
   - "&3Developed collaboratively by NaerQAQ, L1ncey, and QwQTsuki for the Neru server."
   - " "
 
