--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>java.club.neru</groupId>
-    <artifactId>NeruPractice</artifactId>
+    <artifactId>Mochi</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
