添加一位贡献者。

--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -1,7 +1,7 @@
 practice:
   - " "
   - "&3Mochi"
-  - "&3Developed collaboratively by NaerQAQ, L1ncey, and QwQTsuki for the Neru server."
+  - "&3Developed collaboratively by NaerQAQ, L1ncey, 2000000 and QwQTsuki for the Neru server."
   - " "
 
 arena-command-help:
