--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: Mochi
 version: '${project.version}'
 main: club.neru.Mochi
-authors: [ NaerQAQ, L1ncey, QwQTsuki ]
+authors: [ NaerQAQ, L1ncey, QwQTsuki, "2000000" ]
 depend:
   - WorldEdit
   - FastAsyncWorldEdit
