--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -1,7 +1,7 @@
 practice:
   - " "
   - "&3Mochi"
-  - "&3由 NaerQAQ, L1ncey, 与 QwQTsuki 为 Neru 服务器所开发。"
+  - "&3由 NaerQAQ, L1ncey, 2000000 与 QwQTsuki 为 Neru 服务器所开发。"
   - " "
 
 arena-command-help:
