--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -1,27 +1,34 @@
 practice:
   - " "
-  - "&3Mochi"
-  - "&3Developed collaboratively by NaerQAQ, L1ncey, 2000000 and QwQTsuki for the Neru server."
+  - "&8&m---------------------------------------"
+  - "&b&lMochi &r&7| &f@Neru Network"
+  - "&7Collaborative Project developed by &bNaerQAQ&7, "
+  - "&bL1ncey&7, &b2000000&7 and &bQwQTsuki&7."
+  - "&8&m---------------------------------------"
   - " "
 
 arena-command-help:
   - " "
-  - "&3&lArena - "
-  - "&3        create <竞技场名称> - 创建一个新的竞技场"
-  - "&3        delete <竞技场名称> <boolean_true> - 删除此竞技场"
-  - "&3        setLowestLocation <竞技场名称> <object_block_location> - 设置最低点"
-  - "&3        setHighestLocation <竞技场名称> <object_block_location> - 设置最高点"
-  - "&3        setFirstSpawnLocation <竞技场名称> <object_block_location> - 设置第一出生点"
-  - "&3        setSecondSpawnLocation <竞技场名称> <object_block_location> - 设置第二出生点"
-  - "&3        setSpectatorSpawnLocation <竞技场名称> <object_block_location> - 设置观战玩家出生点"
-  - "&3        setMinDeathHeight <竞技场名称> <整数> - 设置最低死亡高度 (即到达此高度必死)"
-  - "&3        setMaxBuildHeight <竞技场名称> <整数> - 设置最高建筑高度"
-  - "&3        copy <竞技场名称> <数量> - 复制子竞技场"
-  - "&3        deleteCopy <竞技场名称> <boolean_true> - 删除所有子竞技场"
+  - "&bArena Guide &7| &fAvilable Commands:"
+  - "&7&o(You can think of the Lowest / Highest locations as vertices of a cuboid.)"
+  - "&7▪ &bCreate &7(name) &f- Create an Arena."
+  - "&7▪ &bDelete &7(name) &a<boolean_true> &f- Delete an Arena."
   - " "
-  - "&c注意: 在更改已有竞技场坐标之前，请先删除所有子竞技场"
-  - "&c格式: 所有 <boolean_???> <object_???> 均非变量，而是固定字符串，直接照抄"
+  - "&7▪ &bsetLowestLocation &f(name) &7<object_block_location>  &f- Sets the Lowest corner."
+  - "&7▪ &bsetHighestLocation &f(name) &7<object_block_location>  &f- Sets the Highest corner."
+  - " "
+  - "&7▪ &bsetFirstSpawnLocation &f(name) &7<object_block_location>  &f- Sets the spawn location of the first player."
+  - "&7▪ &bsetSecondSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of the second player."
+  - "&7▪ &bsetSpectatorSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of spectators."
+  - " "
+  - "&7▪ &bsetMinDeathHeight &7(name)  &f- Determines the Height at which players are insta-killed when reached."
+  - "&7▪ &bsetMinDeathHeight &7(name)  &f- Determines the Heightest point players are allowed to build at."
+  - " "
+  - "&7▪ &bCopy &7(name) &a(int) &f- Makes more copies of the arena."
+  - "&7▪ &bdeleteCopy &7(name) &a<boolean_true> &f- Deletes all copies of an arena."
+  - " "
+  - "&cReminder: &fMake sure to delete all copies of an arena if you want to make changes to it's coordinates. When entering commands make sure to include and Angle Brackets. &7Ie. <boolean_???> <object_???>&f."
   - " "
 
 arena-command-done:
-  - "&a执行完毕! 执行结果: <result>."
+  - "&aOperarion Successful! Results: <result>."
