--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -1,23 +1,30 @@
 practice:
   - " "
-  - "&3Mochi"
-  - "&3由 NaerQAQ, L1ncey, 2000000 与 QwQTsuki 为 Neru 服务器所开发。"
+  - "&8&m---------------------------------------"
+  - "&b&lMochi &7&r| &f@Neru 竞争性服务器"
+  - "&7由 &bNaerQAQ&7, &bL1ncey&7, &b2000000&7 和 &bQwQTsuki&7 为"
+  - "&7neru.club开发。"
+  - "&8&m---------------------------------------"
   - " "
 
 arena-command-help:
   - " "
-  - "&3&lArena - "
-  - "&3        create <竞技场名称> - 创建一个新的竞技场"
-  - "&3        delete <竞技场名称> <boolean_true> - 删除此竞技场"
-  - "&3        setLowestLocation <竞技场名称> <object_block_location> - 设置最低点"
-  - "&3        setHighestLocation <竞技场名称> <object_block_location> - 设置最高点"
-  - "&3        setFirstSpawnLocation <竞技场名称> <object_block_location> - 设置第一出生点"
-  - "&3        setSecondSpawnLocation <竞技场名称> <object_block_location> - 设置第二出生点"
-  - "&3        setSpectatorSpawnLocation <竞技场名称> <object_block_location> - 设置观战玩家出生点"
-  - "&3        setMinDeathHeight <竞技场名称> <整数> - 设置最低死亡高度 (即到达此高度必死)"
-  - "&3        setMaxBuildHeight <竞技场名称> <整数> - 设置最高建筑高度"
-  - "&3        copy <竞技场名称> <数量> - 复制子竞技场"
-  - "&3        deleteCopy <竞技场名称> <boolean_true> - 删除所有子竞技场"
+  - "&b竞技场 &7| &f所有指令："
+  - "&7▪ &bcreate &7<竞技场名称> &f- 创建一个新的竞技场"
+  - "&7▪ &bDelete &7(name) &a<boolean_true> &f- 删除此竞技场"
+  - " "
+  - "&7▪ &betLowestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最低点"
+  - "&7▪ &bsetHighestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最高点"
+  - " "
+  - "&7▪ &bsetFirstSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第一出生点"
+  - "&7▪ &bsetSecondSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第二出生点"
+  - "&7▪ &bsetSpectatorSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置观战玩家出生点"
+  - " "
+  - "&7▪ &bsetMinDeathHeight &f<竞技场名称> &a<整数> &f- 设置最低死亡高度 (即到达此高度必死)"
+  - "&7▪ &bsetMaxBuildHeight &f<竞技场名称> &a<整数> &f- 设置最高建筑高度"
+  - " "
+  - "&7▪ &bcopy <竞技场名称> &a<数量> &f- 复制子竞技场"
+  - "&7▪ &bdeleteCopy &f<竞技场名称> &a<boolean_true> &f- 删除所有子竞技场"
   - " "
   - "&c注意: 在更改已有竞技场坐标之前，请先删除所有子竞技场"
   - "&c格式: 所有 <boolean_???> <object_???> 均非变量，而是固定字符串，直接照抄"
