--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -21,8 +21,8 @@ arena-command-help:
   - "&7▪ &bsetSecondSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of the second player."
   - "&7▪ &bsetSpectatorSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of spectators."
   - " "
-  - "&7▪ &bsetMinDeathHeight &7(name)  &f- Determines the Height at which players are insta-killed when reached."
-  - "&7▪ &bsetMinDeathHeight &7(name)  &f- Determines the Heightest point players are allowed to build at."
+  - "&7▪ &bsetMinDeathHeight &7(name) &a(int) &f- Determines the Height at which players are insta-killed when reached."
+  - "&7▪ &bsetMinDeathHeight &7(name) &a(int) &f- Determines the Heightest point players are allowed to build at."
   - " "
   - "&7▪ &bCopy &7(name) &a(int) &f- Makes more copies of the arena."
   - "&7▪ &bdeleteCopy &7(name) &a<boolean_true> &f- Deletes all copies of an arena."
