--- a/src/main/resources/en.yml
+++ b/src/main/resources/en.yml
@@ -11,24 +11,29 @@ arena-command-help:
   - " "
   - "&bArena Guide &7| &fAvilable Commands:"
   - "&7&o(You can think of the Lowest / Highest locations as vertices of a cuboid.)"
-  - "&7▪ &bCreate &7(name) &f- Create an Arena."
-  - "&7▪ &bDelete &7(name) &a<boolean_true> &f- Delete an Arena."
   - " "
-  - "&7▪ &bsetLowestLocation &f(name) &7<object_block_location>  &f- Sets the Lowest corner."
-  - "&7▪ &bsetHighestLocation &f(name) &7<object_block_location>  &f- Sets the Highest corner."
+  - "&7▪ &bcreate &7(name) &f- Create an Arena."
   - " "
-  - "&7▪ &bsetFirstSpawnLocation &f(name) &7<object_block_location>  &f- Sets the spawn location of the first player."
-  - "&7▪ &bsetSecondSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of the second player."
-  - "&7▪ &bsetSpectatorSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of spectators."
+  - "&7▪ &bcommand delete &7(name) &a<boolean_true> &f- Delete an Arena."
   - " "
-  - "&7▪ &bsetMinDeathHeight &7(name) &a(int) &f- Determines the Height at which players are insta-killed when reached."
-  - "&7▪ &bsetMinDeathHeight &7(name) &a(int) &f- Determines the Heightest point players are allowed to build at."
+  - "&7▪ &bcommand setLowestLocation &f(name) &7<object_block_location>  &f- Sets the Lowest corner."
+  - "&7▪ &bcommand setHighestLocation &f(name) &7<object_block_location>  &f- Sets the Highest corner."
   - " "
-  - "&7▪ &bCopy &7(name) &a(int) &f- Makes more copies of the arena."
-  - "&7▪ &bdeleteCopy &7(name) &a<boolean_true> &f- Deletes all copies of an arena."
+  - "&7▪ &bcommand setFirstSpawnLocation &f(name) &7<object_block_location>  &f- Sets the spawn location of the first player."
+  - "&7▪ &bcommand setSecondSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of the second player."
+  - "&7▪ &bcommand setSpectatorSpawnLocation &7(name) &7<object_block_location> &f- Sets the spawn location of spectators."
+  - " "
+  - "&7▪ &bcommand setMinDeathHeight &7(name) &a(int) &f- Determines the Height at which players are insta-killed when reached."
+  - "&7▪ &bcommand setMinDeathHeight &7(name) &a(int) &f- Determines the Heightest point players are allowed to build at."
+  - " "
+  - "&7▪ &bcommand copy &7(name) &a(int) &f- Makes more copies of the arena."
+  - "&7▪ &bcommand deleteCopy &7(name) &a<boolean_true> &f- Deletes all copies of an arena."
   - " "
   - "&cReminder: &fMake sure to delete all copies of an arena if you want to make changes to it's coordinates. When entering commands make sure to include the Angle Brackets. &7Ie. <boolean_???> <object_???>&f."
   - " "
 
 arena-command-done:
   - "&aOperarion Successful! Results: <result>."
+
+arena-create-done:
+  - "&aCreation Completed!"
