--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -10,21 +10,23 @@ practice:
 arena-command-help:
   - " "
   - "&b竞技场 &7| &f所有指令："
+  - " "
   - "&7▪ &bcreate &7<竞技场名称> &f- 创建一个新的竞技场"
-  - "&7▪ &bDelete &7(name) &a<boolean_true> &f- 删除此竞技场"
   - " "
-  - "&7▪ &betLowestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最低点"
-  - "&7▪ &bsetHighestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最高点"
+  - "&7▪ &bcommand delete &7(竞技场名称) &a<boolean_true> &f- 删除此竞技场"
   - " "
-  - "&7▪ &bsetFirstSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第一出生点"
-  - "&7▪ &bsetSecondSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第二出生点"
-  - "&7▪ &bsetSpectatorSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置观战玩家出生点"
+  - "&7▪ &bcommand setLowestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最低点"
+  - "&7▪ &bcommand setHighestLocation &f<竞技场名称> &7<object_block_location> &f- 设置最高点"
   - " "
-  - "&7▪ &bsetMinDeathHeight &f<竞技场名称> &a<整数> &f- 设置最低死亡高度 (即到达此高度必死)"
-  - "&7▪ &bsetMaxBuildHeight &f<竞技场名称> &a<整数> &f- 设置最高建筑高度"
+  - "&7▪ &bcommand setFirstSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第一出生点"
+  - "&7▪ &bcommand setSecondSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置第二出生点"
+  - "&7▪ &bcommand setSpectatorSpawnLocation &f<竞技场名称> &7<object_block_location> &f- 设置观战玩家出生点"
   - " "
-  - "&7▪ &bcopy <竞技场名称> &a<数量> &f- 复制子竞技场"
-  - "&7▪ &bdeleteCopy &f<竞技场名称> &a<boolean_true> &f- 删除所有子竞技场"
+  - "&7▪ &bcommand setMinDeathHeight &f<竞技场名称> &a<整数> &f- 设置最低死亡高度 (即到达此高度必死)"
+  - "&7▪ &bcommand setMaxBuildHeight &f<竞技场名称> &a<整数> &f- 设置最高建筑高度"
+  - " "
+  - "&7▪ &bcommand copy <竞技场名称> &a<数量> &f- 复制子竞技场"
+  - "&7▪ &bcommand deleteCopy &f<竞技场名称> &a<boolean_true> &f- 删除所有子竞技场"
   - " "
   - "&c注意: 在更改已有竞技场坐标之前，请先删除所有子竞技场"
   - "&c格式: 所有 <boolean_???> <object_???> 均非变量，而是固定字符串，直接照抄"
