更改为本地依赖以修复 Github CI.

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
             <groupId>com.jonahseguin</groupId>
             <artifactId>drink</artifactId>
             <version>1.0.5</version>
-            <scope>compile</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/drink-1.0.5.jar</systemPath>
         </dependency>
 
         <!-- https://projectlombok.org/setup/maven -->
@@ -132,6 +133,26 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.0</version>
+                <executions>
+                    <execution>
+                        <id>unpack-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>unpack-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeScope>system</includeScope>
+                            <includeGroupIds>com.jonahseguin</includeGroupIds>
+                            <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
