--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -14,7 +14,7 @@ access-service-command-help:
   - " "
   - "&bAccessService &7| &f所有指令："
   - " "
-  - "&7▪ &bcommand setLocation &7<object_block_location> &f- 设置玩家进入坐标"
+  - "&7▪ &bcommand setLocation &7<object_location> &f- 设置玩家进入坐标"
   - "&7▪ &bcommand setKitInventoryName &a(装备包库存名) &f- 设置玩家进入时应用的装备包"
   - " "
   - "&c格式: 所有 <boolean_???> <object_???> 均非变量，而是固定字符串，直接照抄"
@@ -54,9 +54,9 @@ arena-command-help:
   - "&7▪ &bcommand setLowestLocation &f(竞技场名称) &7<object_block_location> &f- 设置最低点"
   - "&7▪ &bcommand setHighestLocation &f(竞技场名称) &7<object_block_location> &f- 设置最高点"
   - " "
-  - "&7▪ &bcommand setFirstSpawnLocation &f(竞技场名称) &7<object_block_location> &f- 设置第一出生点"
-  - "&7▪ &bcommand setSecondSpawnLocation &f(竞技场名称) &7<object_block_location> &f- 设置第二出生点"
-  - "&7▪ &bcommand setSpectatorSpawnLocation &f(竞技场名称) &7<object_block_location> &f- 设置观战玩家出生点"
+  - "&7▪ &bcommand setFirstSpawnLocation &f(竞技场名称) &7<object_location> &f- 设置第一出生点"
+  - "&7▪ &bcommand setSecondSpawnLocation &f(竞技场名称) &7<object_location> &f- 设置第二出生点"
+  - "&7▪ &bcommand setSpectatorSpawnLocation &f(竞技场名称) &7<object_location> &f- 设置观战玩家出生点"
   - " "
   - "&7▪ &bcommand setMinDeathHeight &f(竞技场名称) &a<整数> &f- 设置最低死亡高度 (即到达此高度必死)"
   - "&7▪ &bcommand setMaxBuildHeight &f(竞技场名称) &a<整数> &f- 设置最高建筑高度"
