添加 EasyEventListenerInterop，若干修改。

--- a/src/main/resources/zh_CN.yml
+++ b/src/main/resources/zh_CN.yml
@@ -80,6 +80,8 @@ script-command-help:
   - " "
   - "&7▪ &breload &f- 重载所有脚本"
   - " "
+  - "&c注意: 不应该在非测试状态下重载脚本，否则可能会导致对局错误!"
+  - " "
 
 script-reload-done:
   - "&a脚本重载完成! 重载情况请查看控制台!"
